--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "framer-motion": "^11.3.19"
+    "framer-motion": "^11.3.19",
+    "three": "^0.181.0",
+    "@react-three/fiber": "^9.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
